--- a/files/style.css
+++ b/files/style.css
@@ -474,3 +474,15 @@ input:checked + .slider:before {
 .toggle-location label{
     margin-left: 5px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
