--- a/files/style.css
+++ b/files/style.css
@@ -10,8 +10,30 @@ html {
     position: relative;
     min-height: 100%;
   }
+
+  @font-face {
+	font-family: 'BAUHS93';
+	src: local('BAUHS93'),url('/fonts/BAUHS93.TTF') format('truetype');
+}
+.fontsforweb_fontid_2802 {
+	font-family: 'BAUHS93' !important;
+}
+
 body{
     font-family: 'Roboto Condensed', sans-serif;
+}
+header {
+    background-color: #ffffff !important;
+}
+
+.brand-name {
+    color:#203864;
+    font-size: 2em;
+}
+
+#map-canvas {
+    width: 100%;
+    height: 44vh;
 }
 
 header{
@@ -388,6 +410,7 @@ h4.list-group-item-heading{
     .brand-name{
         font-size: 1.5em;
         font-weight: 700;
+        font-family: 'Baumans', serif;
     }
     .product-img-wrapper{
         height: 150px;
