--- a/files/style.css
+++ b/files/style.css
@@ -27,8 +27,9 @@ header {
 }
 
 .brand-name {
-    color:#203864;
+    color:#ea3e32;
     font-size: 2em;
+    text-shadow: 0px 1px #000;
 }
 
 #map-canvas {
@@ -40,7 +41,7 @@ td {
 }
 
 header{
-    padding: 20px;
+    padding-top: 20px;
     font-weight: 700;
     font-size: 20px;
 }
